Statut po zmianach na Zebraniu Walnym w 2022 roku

--- a/Statut_HSP.tex
+++ b/Statut_HSP.tex
@@ -4,7 +4,7 @@
 
 \title{Statut Stowarzyszenia Hackerspace Pomorze}
 \author{Zebranie Walne Stowarzyszenia Hackerspace Pomorze}
-\date{3 maja 2020}
+\date{5 marca 2022}
 
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
@@ -12,6 +12,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{needspace}
 \usepackage[center]{titlesec}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -108,6 +109,9 @@ Stowarzyszenie realizuje swoje cele poprzez:
 \item
   prowadzenie działalności badawczej oraz sporządzanie analiz, ekspertyz, projektów ustaw, raportów i opinii zawierających propozycje rozwiązań w obszarach społecznym, politycznym i gospodarczym służących rozwojowi Rzeczypospolitej Polskiej.
 \end{enumerate}
+
+\myparagraph{§ 9a}
+Wszelkie utwory powstałe w wyniku działalności statutowej Stowarzyszenia lub na potrzeby realizowania działalności statutowej Stowarzyszenia muszą zostać udostępnione na wolnej licencji (free license), znajdującej się na liście utrzymywanej przez Free Software Foundation pod adresem \url{https://www.gnu.org/licenses/license-list.html}
 
 \section{Członkowie Stowarzyszenia}
 \myparagraph{§ 10}
