Naprawienie renderowania w GitHub Actions
W Overleaf działało :)

--- a/Statut_HSP.tex
+++ b/Statut_HSP.tex
@@ -20,8 +20,7 @@
 \renewcommand{\baselinestretch}{0} 
 
 \renewcommand\thesection{Rozdział \Roman{section}.}
-
-\newcommand{\myparagraph}[1]{\needspace{16ex}\begin{center}\subparagraph{#1}\end{center}\\}
+\newcommand{\myparagraph}[1]{\needspace{16ex}\subsection*{#1}}
 
 \maketitle
 
