fix enumarate render

--- a/Statut_HSP.tex
+++ b/Statut_HSP.tex
@@ -217,13 +217,13 @@ Członkowie zwyczajni mają obowiązek:
     \item Zarząd podejmuje uchwałę o zawieszeniu członkostwa w terminie 30 dni od otrzymania wniosku.
     
     \item Zawieszenie członkostwa oznacza czasowe ustanie praw i obowiązków członka, w szczególności:
-    \begin{enumerate}[label*=\alph*.]
+    \begin{enumerate}
         \item utratę prawa do udziału w głosowaniach i zebraniach,
         \item zwolnienie z obowiązku opłacania składek i uczestniczenia w działalności Stowarzyszenia.
     \end{enumerate}
     
     \item Przywrócenie aktywnego członkostwa następuje:
-    \begin{enumerate}[label*=\alph*.]
+    \begin{enumerate}
         \item na wniosek członka skierowany do Zarządu, lub
         \item automatycznie po upływie 6 miesięcy od dnia zawieszenia, o ile członek nie poinformuje o rezygnacji z odwieszenia.
     \end{enumerate}
