--- a/Statut_HSP.tex
+++ b/Statut_HSP.tex
@@ -2,7 +2,7 @@
 
 \title{Statut Stowarzyszenia Hackerspace Pomorze}
 \author{Zebranie Walne Stowarzyszenia Hackerspace Pomorze}
-\date{5 marca 2022}
+\date{13 kwietnia 2025}
 
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
@@ -174,7 +174,7 @@ Członkowie zwyczajni mają obowiązek:
   Członkowie wspierający i honorowi nie posiadają biernego oraz czynnego prawa wyborczego, mogą jednak brać udział z głosem doradczym w statutowych władzach Stowarzyszenia, poza tym posiadają takie prawa jak członkowie zwyczajni.
 \item
   Członek wspierający ma obowiązek wywiązywania się z zadeklarowanych świadczeń, przestrzegania statutu oraz uchwał władz Stowarzyszenia.
-  Członek wspierający posiada dobrowolność w opłacaniu składek członkowskich.
+  Członek wspierający posiada obowiązek opłacania składek członkowskich.
 \item
   Członek zwykły może w każdym momencie zostać członkiem wspierającym informując w formie pisemnej zarząd.
 \item
@@ -246,7 +246,7 @@ Kadencja wszystkich wybieralnych władz Stowarzyszenia trwa 2 lata.
 \item
   Dla zwołania Walnego Zebrania Członków Zarząd podaje dwa terminy. Jeśli w pierwszym terminie nie zbierze się połowa członków zwyczajnych, to Walne Zebranie Członków odbywa się w drugim terminie.
 \item
-  Walne Zebranie w trybie zwyczajnym zwołuje Zarząd raz w roku, jako sprawozdawcze, i co dwa lata, jako sprawozdawczo-wyborcze, zawiadamiając członków o jego terminie i miejscu za pomocą poczty elektronicznej, co najmniej na 14 dni przed pierwszym terminem Walnego Zebrania. Zawiadomienie musi zawierać sprawozdanie z działalności Stowarzyszenia oraz projekt porządku obrad. Oba terminy Walnego Zebrania Członków w trybie zwyczajnym muszą być odległe od siebie przynajmniej o 7, ale nie bardziej niż o 14 dni kalendarzowych.
+  Walne Zebranie jest zwoływane w trybie zwyczajnym, przez Zarząd, raz w roku jako sprawozdawcze, i co dwa lata jako sprawozdawczo-wyborcze, zawiadamiając członków o jego terminie i miejscu za pomocą poczty elektronicznej, co najmniej na 14 dni przed pierwszym terminem Walnego Zebrania. Zawiadomienie musi zawierać sprawozdanie z działalności Stowarzyszenia oraz projekt porządku obrad. Oba terminy Walnego Zebrania Członków w trybie zwyczajnym muszą być odległe od siebie nie bardziej niż o 14 dni kalendarzowych.
 \item
   Walne Zebranie obraduje wg uchwalonego przez siebie regulaminu obrad.
 \item
@@ -265,7 +265,7 @@ Kadencja wszystkich wybieralnych władz Stowarzyszenia trwa 2 lata.
 \item
   Dla zwołania Walnego Zebrania Członków w trybie nadzwyczajnym Zarząd podaje termin obrad do wiadomości wszystkich członków pocztą elektroniczną co najmniej 7 dni przed pierwszym terminem zebrania.
 \item
-  Oba terminy Walnego Zebrania Członków w trybie nadzwyczajnym muszą być odległe od siebie przynajmniej o 3, ale nie bardziej niż o 7 dni kalendarzowych.
+  Oba terminy Walnego Zebrania Członków w trybie nadzwyczajnym muszą być odległe od siebie nie bardziej niż o 7 dni kalendarzowych.
 \item
   Na żądanie co najmniej 1⁄4 liczby członków Stowarzyszenia obecnych na walnym zebraniu przewodniczący zarządza głosowanie tajne w innych sprawach -- objętych porządkiem obrad, jak też zgłoszonym na zebraniu.
 \end{enumerate}
